ViTables ChangeLog
==================
** Jan 21, 2009**
	Fixed a bug in the support for unicode filenames in Windows.

	A better support for unicode filenames has been added.

** Jan 19, 2009**
	Fixed a small bug in the support for date/time.

** Jan 17, 2009**
	Date/time information is displayed now as legal time.

** Jan 16, 2009**
	Fixed a bug in the zoom cell feature.

** Jan 10, 2009**
	More improvements to installer for Windows.

	Fixed a serious bug in the installer for Windows.

** Jan 07, 2009**
	Code style of the vitables package has been improved.

** Jan 02, 2009**
	Code style of the h5db and docBrowser subpackages has been improved.

	Code style of the preferences, nodes and nodeProperties subpackages has been improved.

	Code style of the vtWidgets and vtTables subpackages has been improved.

** Jan 01, 2009**
	PyQt4 imports changed to remove unnecessary code verbosity.

** Dec 27, 2008**
	Fixed bug 014953.

	Strings are managed via unicode strings with utf-8 encoding.

** Dec 22, 2008**
	The User's Guide has been updated.

	Every str() call as been replaced by a unicode() call.

** Dec 19, 2008**
	Fixed a couple of minor problems.

	Fixed a bug that made impossible to open files by drag and drop in
	Windows.

	Fixed a bug introduced in the previous commit.

	The node copy/cut/paste mechanism has changed. Now it is much more efficient
	and simpler.

** Dec 18, 2008**
	The Copy Node operation  has been greatly optimized.

	Fixed an encoding related problem in the file opening procedure.

	Fixed a minor issue with the vertical header of large tables.

	The procedure for creating a Windows installer has been changed in order
	to deal properly with PyQt4.

** Dec 16, 2008**
	Fixed some bugs regarding portability between different platforms

** Dec 15, 2008**
	Fixed a problem in setup.py.

	Applied several simplifications derived from the use of Qt resources system.

	Fixed some bugs regarding portability between different platforms.

** Dec 13, 2008**